--- a/ios/technica/Images.xcassets/Launch Screen.storyboard
+++ b/ios/technica/Images.xcassets/Launch Screen.storyboard
@@ -18,29 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image" translatesAutoresizingMaskIntoConstraints="NO" id="pMa-VN-xV3">
-                                <rect key="frame" x="15" y="273.5" width="384" height="349"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bitcamp-white" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-Wy-xyG">
+                                <rect key="frame" x="157" y="388" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="pMa-VN-xV3" secondAttribute="height" multiplier="671:609" id="UoH-N7-PP2"/>
+                                    <constraint firstAttribute="width" constant="100" id="4PV-Wb-aDo"/>
+                                    <constraint firstAttribute="width" secondItem="tZQ-Wy-xyG" secondAttribute="height" multiplier="1:1" id="tzT-r5-v0A"/>
+                                    <constraint firstAttribute="height" constant="100" id="zxP-0S-ODJ"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.87353628873825073" green="0.49242657423019409" blue="0.34111848473548889" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="pMa-VN-xV3" secondAttribute="trailing" constant="15" id="3If-de-Ek2"/>
-                            <constraint firstItem="pMa-VN-xV3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ggq-GJ-jzv"/>
-                            <constraint firstItem="pMa-VN-xV3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="15" id="Lvp-Cd-OIl"/>
-                            <constraint firstItem="pMa-VN-xV3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lI3-3G-afg"/>
+                            <constraint firstItem="tZQ-Wy-xyG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="p1v-MU-mLs"/>
+                            <constraint firstItem="tZQ-Wy-xyG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-10" id="v9b-Lr-Aa4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.33035714285711"/>
         </scene>
     </scenes>
     <resources>
-        <image name="image" width="671" height="609"/>
+        <image name="bitcamp-white" width="618" height="618"/>
     </resources>
 </document>
